# assistant_handle_interface

./: .gitignore  README.md  pyproject.toml
core/: main.py
core/tools/: tools.py
